# agentic-engineering

./: .gitignore  README.md
regen/backend/: .env.example  AGENTS.md  pyproject.toml  pytest.ini  requirements.txt  test_auth.sh
regen/backend/alembic/: env.py
regen/backend/alembic/versions/: 001_initial_schema.py  002_seed_templates.py
regen/backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
regen/backend/app/adapters/: __init__.py
regen/backend/app/adapters/controllers/: __init__.py  auth_controller.py  experience_controller.py  jd_controller.py  resume_controller.py
regen/backend/app/adapters/repositories/: __init__.py  postgres_experience_repository.py  postgres_jd_repository.py  postgres_resume_repository.py  postgres_user_repository.py
regen/backend/app/domain/: __init__.py
regen/backend/app/domain/entities/: __init__.py  experience.py  jd.py  resume.py  user.py
regen/backend/app/domain/repositories/: __init__.py  experience_repository.py  jd_repository.py  resume_repository.py  user_repository.py
regen/backend/app/infrastructure/: __init__.py  deps.py  logging.py  security.py
regen/backend/app/infrastructure/ai/: __init__.py  gateway.py  (+3 more)
regen/backend/app/use_cases/: __init__.py
regen/backend/tests/: README.md  conftest.py
regen/backend/tests/controllers/: __init__.py  test_auth_controller.py  test_experience_controller.py  test_jd_controller.py  test_resume_controller.py
regen/backend/tests/domain/: conftest.py  test_experience_entity.py  test_jd_entity.py  test_resume_entity.py  test_user_entity.py
regen/backend/tests/infrastructure/: conftest.py  test_ai_adapters.py  test_ai_gateway.py  test_ai_router.py  test_pdf_service.py  test_security.py
regen/backend/tests/repositories/: __init__.py  test_experience_repository.py  test_jd_repository.py  test_resume_repository.py  test_user_repository.py
regen/backend/tests/use_cases/: __init__.py  conftest.py  test_jd_use_cases.py  test_resume_use_cases.py  test_user_use_cases.py
(+597 files in other folders)
